Changes to build with JDK10
- update jaCoCo version
- new `Integer(n)` is deprecated
- @PreDestroy no longer present
- SSL change